--- a/main/Microsoft.Practices.ServiceLocation/Microsoft.Practices.ServiceLocation.csproj
+++ b/main/Microsoft.Practices.ServiceLocation/Microsoft.Practices.ServiceLocation.csproj
@@ -39,6 +39,7 @@
     <Compile Include="ActivationException.Desktop.cs" />
     <Compile Include="IServiceLocator.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Properties\AssemblyInfo.Desktop.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
